--- a/core/agents/nb_claim_decomposer.ipynb
+++ b/core/agents/nb_claim_decomposer.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "MODEL = \"mistral-nemo\"\n",
     "TEMPERATURE = 0\n",
-    "load_dotenv('.env', override=True)\n",
+    "load_dotenv(\".env\", override=True)\n",
     "\n",
     "\"\"\"\n",
     "1. Define your State object\n",
@@ -32,18 +32,9 @@
     "    claims: list[str]\n",
     "\n",
     "\n",
-    "LLM_OUTPUT_FORMAT = {\n",
-    "    \"type\": \"array\",\n",
-    "    \"items\": {\n",
-    "        \"type\": \"string\"\n",
-    "    }\n",
-    "}\n",
+    "LLM_OUTPUT_FORMAT = {\"type\": \"array\", \"items\": {\"type\": \"string\"}}\n",
     "\n",
-    "llm = ChatOllama(\n",
-    "    model=MODEL,\n",
-    "    temperature=TEMPERATURE,\n",
-    "    format=LLM_OUTPUT_FORMAT\n",
-    ")"
+    "llm = ChatOllama(model=MODEL, temperature=TEMPERATURE, format=LLM_OUTPUT_FORMAT)"
    ]
   },
   {
@@ -69,26 +60,29 @@
     "    system_prompt = f.read()\n",
     "system_message = SystemMessage(content=system_prompt)\n",
     "\n",
+    "\n",
     "def preprocessing(state: State) -> State:\n",
     "    \"\"\"\n",
     "    Preprocesses state before sending to the assistant for decomposition.\n",
     "    Currently, this just extracts the text from the state, and sets it\n",
     "    as a HumanMessage following the SystemMessage\n",
     "    \"\"\"\n",
-    "    state['messages'] = [system_message, HumanMessage(content=state['text'])]\n",
+    "    state[\"messages\"] = [system_message, HumanMessage(content=state[\"text\"])]\n",
     "    return state\n",
+    "\n",
     "\n",
     "def assistant(state: State) -> State:\n",
     "    \"\"\"\n",
     "    Gets the LLM response to System and Human prompt\n",
     "    \"\"\"\n",
     "    print(f\"Assistant node input:\")\n",
-    "    for message in state['messages']:\n",
+    "    for message in state[\"messages\"]:\n",
     "        print(message)\n",
-    "    response = llm.invoke(state['messages'])\n",
+    "    response = llm.invoke(state[\"messages\"])\n",
     "    print(f\"Assistant node response:\")\n",
     "    print(response)\n",
-    "    return {'messages': response}\n",
+    "    return {\"messages\": response}\n",
+    "\n",
     "\n",
     "def postprocessing(state: State) -> State:\n",
     "    \"\"\"\n",
@@ -97,15 +91,17 @@
     "    as a list of strings\n",
     "    \"\"\"\n",
     "    # We assume the last message in the state is the AI response\n",
-    "    message = state['messages'][-1]\n",
-    "    assert isinstance(message, AIMessage), \"Expected the last message to be an AIMessage\"\n",
+    "    message = state[\"messages\"][-1]\n",
+    "    assert isinstance(\n",
+    "        message, AIMessage\n",
+    "    ), \"Expected the last message to be an AIMessage\"\n",
     "    # claims = message.content\n",
     "    try:\n",
     "        claims = json.loads(message.content)\n",
     "    except json.JSONDecodeError as e:\n",
     "        print(f\"Error decoding JSON from claim decomposer: {e}\")\n",
     "\n",
-    "    return {'claims': claims}\n",
+    "    return {\"claims\": claims}\n",
     "\n",
     "\n",
     "builder = StateGraph(State)\n",
@@ -151,7 +147,7 @@
     "The mission was launched by NASA using a Saturn V rocket.\n",
     "\"\"\"\n",
     "\n",
-    "final_state = claim_decomposer.invoke({'text': text})"
+    "final_state = claim_decomposer.invoke({\"text\": text})"
    ]
   },
   {
@@ -210,7 +206,7 @@
     }
    ],
    "source": [
-    "for message in final_state['messages']:\n",
+    "for message in final_state[\"messages\"]:\n",
     "    message.pretty_print()"
    ]
   },
@@ -229,8 +225,8 @@
     }
    ],
    "source": [
-    "print(final_state['claims'])\n",
-    "print(type(final_state['claims']))"
+    "print(final_state[\"claims\"])\n",
+    "print(type(final_state[\"claims\"]))"
    ]
   },
   {
