--- a/core/agents/nb_integration.ipynb
+++ b/core/agents/nb_integration.ipynb
@@ -9,7 +9,7 @@
     "from claim_decomposer import claim_decomposer\n",
     "from research_agent import research_agent\n",
     "from reasoning_agent import reasoning_agent\n",
-    "from verdict_agent import verdict_agent\n"
+    "from verdict_agent import verdict_agent"
    ]
   },
   {
@@ -24,9 +24,9 @@
     "The mission was launched by NASA using a Saturn V rocket.\n",
     "\"\"\"\n",
     "\n",
-    "response = claim_decomposer.invoke({'text': text})\n",
-    "claims = response['claims']\n",
-    "research_results = [research_agent.invoke({'claim': claim}) for claim in claims]\n"
+    "response = claim_decomposer.invoke({\"text\": text})\n",
+    "claims = response[\"claims\"]\n",
+    "research_results = [research_agent.invoke({\"claim\": claim}) for claim in claims]"
    ]
   },
   {
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "for message in response['messages']:\n",
+    "for message in response[\"messages\"]:\n",
     "    message.pretty_print()"
    ]
   },
@@ -241,11 +241,14 @@
    "outputs": [],
    "source": [
     "from reasoning_agent import reasoning_agent\n",
+    "\n",
     "reasoning_results = []\n",
     "for result in research_results:\n",
-    "    claim = result['claim']\n",
-    "    evidence = [evidence['result'] for evidence in result['evidence']]\n",
-    "    reasoning_results.append(reasoning_agent.invoke({'claim': claim, 'evidence': evidence}))"
+    "    claim = result[\"claim\"]\n",
+    "    evidence = [evidence[\"result\"] for evidence in result[\"evidence\"]]\n",
+    "    reasoning_results.append(\n",
+    "        reasoning_agent.invoke({\"claim\": claim, \"evidence\": evidence})\n",
+    "    )"
    ]
   },
   {
@@ -291,9 +294,9 @@
    "outputs": [],
    "source": [
     "initial_verdict_state = {\n",
-    "    \"claims\": [result['claim'] for result in reasoning_results],\n",
-    "    \"labels\": [result['label'] for result in reasoning_results],\n",
-    "    \"justifications\": [result['justification'] for result in reasoning_results],\n",
+    "    \"claims\": [result[\"claim\"] for result in reasoning_results],\n",
+    "    \"labels\": [result[\"label\"] for result in reasoning_results],\n",
+    "    \"justifications\": [result[\"justification\"] for result in reasoning_results],\n",
     "    \"messages\": [],\n",
     "    \"final_label\": None,\n",
     "    \"final_justification\": None,\n",
@@ -395,7 +398,7 @@
     }
    ],
    "source": [
-    "for message in final_state['messages']:\n",
+    "for message in final_state[\"messages\"]:\n",
     "    message.pretty_print()"
    ]
   },
@@ -414,8 +417,8 @@
     }
    ],
    "source": [
-    "print(final_state['final_label'])\n",
-    "print(final_state['final_justification'])"
+    "print(final_state[\"final_label\"])\n",
+    "print(final_state[\"final_justification\"])"
    ]
   },
   {
