--- a/core/agents/nb_reasoning_agent.ipynb
+++ b/core/agents/nb_reasoning_agent.ipynb
@@ -60,13 +60,13 @@
     "\n",
     "MODEL = \"mistral-nemo\"\n",
     "TEMPERATURE = 0\n",
-    "load_dotenv('../.env', override=True)\n",
+    "load_dotenv(\"../.env\", override=True)\n",
     "# PATH_TO_FILE = os.path.abspath(__file__)\n",
     "\n",
     "\n",
     "TOOL_REGISTRY = {\n",
-    "    'core.tools.builtins.calculator': ['multiply', 'add', 'divide'],\n",
-    "    'core.tools.builtins.wikipedia': ['query']\n",
+    "    \"core.tools.builtins.calculator\": [\"multiply\", \"add\", \"divide\"],\n",
+    "    \"core.tools.builtins.wikipedia\": [\"query\"],\n",
     "}\n",
     "\n",
     "\n",
@@ -88,13 +88,17 @@
     "        print(f\"I'm in cwd: {os.getcwd()}\")\n",
     "        print(f\"Available modules: {os.listdir(os.getcwd())}\")\n",
     "        print(\n",
-    "            f\"Error: Could not import function '{function_name}' from module '{module_name}'.\")\n",
+    "            f\"Error: Could not import function '{function_name}' from module '{module_name}'.\"\n",
+    "        )\n",
     "        print(f\"Exception: {e}\")\n",
     "        return None\n",
     "\n",
     "\n",
-    "tools = [import_function(module, function) for module,\n",
-    "         functions in TOOL_REGISTRY.items() for function in functions]\n",
+    "tools = [\n",
+    "    import_function(module, function)\n",
+    "    for module, functions in TOOL_REGISTRY.items()\n",
+    "    for function in functions\n",
+    "]\n",
     "\n",
     "\n",
     "llm = ChatOllama(\n",
@@ -111,7 +115,7 @@
     "    evidence: list[dict]\n",
     "\n",
     "\n",
-    "with open('prompts/research_agent_system_prompt.txt', 'r') as f:\n",
+    "with open(\"prompts/research_agent_system_prompt.txt\", \"r\") as f:\n",
     "    sys_msg = SystemMessage(content=f.read())\n",
     "\n",
     "\n",
@@ -121,12 +125,12 @@
     "    Currently, this just extracts the claim from the state and sets it as a HumanMessage\n",
     "    following the SystemMessage\n",
     "    \"\"\"\n",
-    "    state['messages'] = [sys_msg, HumanMessage(content=state['claim'])]\n",
+    "    state[\"messages\"] = [sys_msg, HumanMessage(content=state[\"claim\"])]\n",
     "    return state\n",
     "\n",
     "\n",
     "def assistant(state: State) -> State:\n",
-    "    response = llm.invoke(state['messages'])\n",
+    "    response = llm.invoke(state[\"messages\"])\n",
     "    return {\"messages\": response}\n",
     "\n",
     "\n",
@@ -137,22 +141,28 @@
     "    \"\"\"\n",
     "\n",
     "    evidence = []\n",
-    "    for i in range(len(state['messages'])):\n",
-    "        message = state['messages'][i]\n",
-    "        if isinstance(message, AIMessage) and hasattr(message, 'tool_calls'):\n",
+    "    for i in range(len(state[\"messages\"])):\n",
+    "        message = state[\"messages\"][i]\n",
+    "        if isinstance(message, AIMessage) and hasattr(message, \"tool_calls\"):\n",
     "            for tool_call in message.tool_calls:\n",
     "                # Scan later messages for the corresponding ToolMessage\n",
-    "                for j in range(i + 1, len(state['messages'])):\n",
-    "                    next_message = state['messages'][j]\n",
-    "                    if isinstance(next_message, ToolMessage) and next_message.tool_call_id == tool_call['id']:\n",
+    "                for j in range(i + 1, len(state[\"messages\"])):\n",
+    "                    next_message = state[\"messages\"][j]\n",
+    "                    if (\n",
+    "                        isinstance(next_message, ToolMessage)\n",
+    "                        and next_message.tool_call_id == tool_call[\"id\"]\n",
+    "                    ):\n",
     "                        # Found the corresponding ToolMessage\n",
-    "                        evidence.append({\n",
-    "                            'name': tool_call['name'],\n",
-    "                            'args': tool_call['args'],\n",
-    "                            'result': next_message.content})\n",
+    "                        evidence.append(\n",
+    "                            {\n",
+    "                                \"name\": tool_call[\"name\"],\n",
+    "                                \"args\": tool_call[\"args\"],\n",
+    "                                \"result\": next_message.content,\n",
+    "                            }\n",
+    "                        )\n",
     "                        break\n",
     "\n",
-    "    return {'evidence': evidence}\n",
+    "    return {\"evidence\": evidence}\n",
     "    # return state\n",
     "\n",
     "\n",
@@ -171,7 +181,7 @@
     "builder.add_conditional_edges(\n",
     "    source=\"assistant\",\n",
     "    path=tools_condition,\n",
-    "    path_map={'tools': 'tools', '__end__': 'postprocessing'}\n",
+    "    path_map={\"tools\": \"tools\", \"__end__\": \"postprocessing\"},\n",
     ")\n",
     "builder.add_edge(\"tools\", \"assistant\")\n",
     "builder.add_edge(\"postprocessing\", END)\n",
@@ -197,7 +207,6 @@
     }
    ],
    "source": [
-    "\n",
     "\"\"\"\n",
     "5. Build the graph\n",
     "\"\"\"\n",
@@ -212,8 +221,7 @@
     "\n",
     "builder.add_edge(\"assistant\", \"postprocessing\")\n",
     "builder.add_edge(\"postprocessing\", END)\n",
-    "graph = builder.compile()\n",
-    "\n"
+    "graph = builder.compile()"
    ]
   },
   {
@@ -223,8 +231,13 @@
    "outputs": [],
    "source": [
     "from langchain_core.messages import HumanMessage\n",
+    "\n",
     "claim = \"George Washington was the first president of the United States.\"\n",
-    "evidence = [\"George Washington was born in 1732.\", \"George Washington was a general in the Revolutionary War.\", \"George Washington was elected president in 1789.\"]\n",
+    "evidence = [\n",
+    "    \"George Washington was born in 1732.\",\n",
+    "    \"George Washington was a general in the Revolutionary War.\",\n",
+    "    \"George Washington was elected president in 1789.\",\n",
+    "]\n",
     "initial_state = {\"claim\": claim, \"evidence\": evidence}\n",
     "final_state = graph.invoke(initial_state)"
    ]
@@ -254,7 +267,7 @@
     "print(f\"Label: {final_state['label']}\")\n",
     "print(f\"Justification: {final_state['justification']}\")\n",
     "print(\"Messages:\")\n",
-    "for m in final_state['messages']:\n",
+    "for m in final_state[\"messages\"]:\n",
     "    m.pretty_print()"
    ]
   },
