--- a/core/agents/nb_research_agent.ipynb
+++ b/core/agents/nb_research_agent.ipynb
@@ -20,7 +20,13 @@
     "from dotenv import load_dotenv\n",
     "import importlib\n",
     "import os\n",
-    "from langchain_core.messages import AIMessage, BaseMessage, HumanMessage, ToolMessage, SystemMessage\n",
+    "from langchain_core.messages import (\n",
+    "    AIMessage,\n",
+    "    BaseMessage,\n",
+    "    HumanMessage,\n",
+    "    ToolMessage,\n",
+    "    SystemMessage,\n",
+    ")\n",
     "from langchain_ollama import ChatOllama\n",
     "from langgraph.graph import StateGraph, START, END\n",
     "from langgraph.graph.message import add_messages\n",
@@ -30,7 +36,7 @@
     "\n",
     "MODEL = \"mistral-nemo\"\n",
     "TEMPERATURE = 0\n",
-    "load_dotenv('../.env', override=True)"
+    "load_dotenv(\"../.env\", override=True)"
    ]
   },
   {
@@ -48,9 +54,10 @@
    ],
    "source": [
     "TOOL_REGISTRY = {\n",
-    "    'tools.calculator': ['multiply', 'add', 'divide'],\n",
-    "    'tools.wikipedia': ['query']\n",
+    "    \"tools.calculator\": [\"multiply\", \"add\", \"divide\"],\n",
+    "    \"tools.wikipedia\": [\"query\"],\n",
     "}\n",
+    "\n",
     "\n",
     "def import_function(module_name, function_name):\n",
     "    \"\"\"Dynamically imports a function from a module.\n",
@@ -67,10 +74,17 @@
     "        function = getattr(module, function_name)\n",
     "        return function\n",
     "    except (ImportError, AttributeError):\n",
-    "        print(f\"Error: Could not import function '{function_name}' from module '{module_name}'.\")\n",
+    "        print(\n",
+    "            f\"Error: Could not import function '{function_name}' from module '{module_name}'.\"\n",
+    "        )\n",
     "        return None\n",
     "\n",
-    "tools = [import_function(module, function) for module, functions in TOOL_REGISTRY.items() for function in functions]\n",
+    "\n",
+    "tools = [\n",
+    "    import_function(module, function)\n",
+    "    for module, functions in TOOL_REGISTRY.items()\n",
+    "    for function in functions\n",
+    "]\n",
     "print(f\"Tools: {[tool.__name__ for tool in tools]}\")"
    ]
   },
@@ -81,10 +95,10 @@
    "outputs": [],
    "source": [
     "llm = ChatOllama(\n",
-    "    model=MODEL, \n",
+    "    model=MODEL,\n",
     "    temperature=TEMPERATURE,\n",
     "    # base_url=\"http://host.docker.internal:11434\", # if running in the studio\n",
-    "    ).bind_tools(tools)\n",
+    ").bind_tools(tools)\n",
     "\n",
     "\n",
     "class State(TypedDict):\n",
@@ -102,9 +116,9 @@
     "from IPython.display import Image, display\n",
     "\n",
     "\n",
-    "\n",
-    "with open('prompts/research_agent_system_prompt.txt', 'r') as f:\n",
+    "with open(\"prompts/research_agent_system_prompt.txt\", \"r\") as f:\n",
     "    sys_msg = SystemMessage(content=f.read())\n",
+    "\n",
     "\n",
     "def preprocessing(state: State):\n",
     "    \"\"\"\n",
@@ -112,35 +126,43 @@
     "    Currently, this just extracts the claim from the state and sets it as a HumanMessage\n",
     "    following the SystemMessage\n",
     "    \"\"\"\n",
-    "    return {\"messages\": HumanMessage(content=state['claim'])}\n",
+    "    return {\"messages\": HumanMessage(content=state[\"claim\"])}\n",
+    "\n",
     "\n",
     "def assistant(state: State) -> State:\n",
-    "    response = llm.invoke(state['messages'])\n",
+    "    response = llm.invoke(state[\"messages\"])\n",
     "    return {\"messages\": response}\n",
+    "\n",
     "\n",
     "def postprocessing(state: State) -> State:\n",
     "    \"\"\"\n",
     "    Scan the message history to extract tool calls and results into tuples:\n",
     "    (tool_name, tool_args, tool_result) for the 'evidence' list in the state\n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    evidence = []\n",
-    "    for i in range(len(state['messages'])):\n",
-    "        message = state['messages'][i]\n",
-    "        if isinstance(message, AIMessage) and hasattr(message, 'tool_calls'):\n",
+    "    for i in range(len(state[\"messages\"])):\n",
+    "        message = state[\"messages\"][i]\n",
+    "        if isinstance(message, AIMessage) and hasattr(message, \"tool_calls\"):\n",
     "            for tool_call in message.tool_calls:\n",
     "                # Scan later messages for the corresponding ToolMessage\n",
-    "                for j in range(i + 1, len(state['messages'])):\n",
-    "                    next_message = state['messages'][j]\n",
-    "                    if isinstance(next_message, ToolMessage) and next_message.tool_call_id == tool_call['id']:\n",
+    "                for j in range(i + 1, len(state[\"messages\"])):\n",
+    "                    next_message = state[\"messages\"][j]\n",
+    "                    if (\n",
+    "                        isinstance(next_message, ToolMessage)\n",
+    "                        and next_message.tool_call_id == tool_call[\"id\"]\n",
+    "                    ):\n",
     "                        # Found the corresponding ToolMessage\n",
-    "                        evidence.append({\n",
-    "                            'name': tool_call['name'], \n",
-    "                            'args': tool_call['args'], \n",
-    "                            'result': next_message.content})\n",
+    "                        evidence.append(\n",
+    "                            {\n",
+    "                                \"name\": tool_call[\"name\"],\n",
+    "                                \"args\": tool_call[\"args\"],\n",
+    "                                \"result\": next_message.content,\n",
+    "                            }\n",
+    "                        )\n",
     "                        break\n",
     "\n",
-    "    return {'evidence': evidence}\n",
+    "    return {\"evidence\": evidence}\n",
     "    # return state\n",
     "\n",
     "\n",
@@ -159,7 +181,7 @@
     "builder.add_conditional_edges(\n",
     "    source=\"assistant\",\n",
     "    path=tools_condition,\n",
-    "    path_map={'tools': 'tools', '__end__': 'postprocessing'}\n",
+    "    path_map={\"tools\": \"tools\", \"__end__\": \"postprocessing\"},\n",
     ")\n",
     "builder.add_edge(\"tools\", \"assistant\")\n",
     "builder.add_edge(\"postprocessing\", END)\n",
@@ -239,7 +261,7 @@
     }
    ],
    "source": [
-    "for m in messages['messages']:\n",
+    "for m in messages[\"messages\"]:\n",
     "    m.pretty_print()"
    ]
   },
@@ -267,6 +289,7 @@
    ],
    "source": [
     "from pprint import pprint\n",
+    "\n",
     "pprint(messages)"
    ]
   },
@@ -294,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = react_graph.nodes['assistant'].invoke(\n",
+    "response = react_graph.nodes[\"assistant\"].invoke(\n",
     "    {\"messages\": [HumanMessage(content=\"hi there\")]}\n",
     ")"
    ]
