--- a/core/agents/nb_verdict_agent.ipynb
+++ b/core/agents/nb_verdict_agent.ipynb
@@ -25,21 +25,21 @@
     "    \"messages\": [],\n",
     "    \"claims\": [\n",
     "        \"The Eiffel Tower is located in Berlin.\",\n",
-    "        \"Water boils at 100 degrees Celsius at sea level.\"\n",
+    "        \"Water boils at 100 degrees Celsius at sea level.\",\n",
     "    ],\n",
     "    \"labels\": [\"false\", \"true\"],\n",
     "    \"justifications\": [\n",
     "        \"The Eiffel Tower is in Paris, not Berlin.\",\n",
-    "        \"Scientific evidence confirms water boils at 100°C at sea level.\"\n",
+    "        \"Scientific evidence confirms water boils at 100°C at sea level.\",\n",
     "    ],\n",
     "    \"final_label\": None,\n",
-    "    \"final_justification\": None\n",
+    "    \"final_justification\": None,\n",
     "}\n",
     "\n",
     "final_state = graph.invoke(test_state)\n",
     "\n",
     "print(f\"Final Verdict: {final_state['final_label']}\")\n",
-    "print(f\"Justification: {final_state['final_justification']}\")\n"
+    "print(f\"Justification: {final_state['final_justification']}\")"
    ]
   },
   {
