normalizes builtin tool interface, cleans up process of loading builtins for easier communication with frontend, adds Analysis typed dict and adds list[Analysis] to /query endpoint return object

--- a/core/agents/nb_integration.ipynb
+++ b/core/agents/nb_integration.ipynb
@@ -98,11 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = await process_query(text='Philadelphia used to be the capital of the United States', selected_sources=None)"
+    "result = await process_query(text='Philadelphia used to be the capital of the United States', use_builtin_tools=None)"
    ]
   },
   {
