--- a/core/agents/tools/builtins/nb_tavali_demo.ipynb
+++ b/core/agents/tools/builtins/nb_tavali_demo.ipynb
@@ -38,12 +38,12 @@
    "outputs": [],
    "source": [
     "from langchain_ollama import ChatOllama\n",
-    "from core.agents.tools.builtins.web_search import web_search_tavily\n",
+    "from core.agents.tools.builtins.web_search import tool_function\n",
     "from pprint import pprint\n",
     "\n",
     "llm = ChatOllama(\n",
     "    model=\"mistral-nemo\",\n",
-    "    temperature=0).bind_tools([web_search_tavily])\n",
+    "    temperature=0).bind_tools([tool_function])\n",
     "\n",
     "from langchain_core.messages import SystemMessage, HumanMessage, AIMessage\n",
     "\n",
