--- a/tests/evaluation/fever2.ipynb
+++ b/tests/evaluation/fever2.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
     "        claim = row['claim']\n",
     "        label = row['label']\n",
     "\n",
-    "        agent_response = await process_query(text=claim, selected_sources=None)\n",
+    "        agent_response = await process_query(text=claim, use_builtin_tools=None)\n",
     "        predicted_label = agent_response['final_label']\n",
     "        predicted_fever_label = translate_label(predicted_label)\n",
     "\n",
